# AURA

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  aura.toml  backfill_session_meta.py  docker-compose.yml  verify_full.mjs  verify_numbers.mjs  verify_numbers.py  verify_page_people_detailed.mjs
.claude/agents/: code-reviewer.md  data-engineer.md  dbt-expert.md  frontend-engineer.md  runner.md
.github/workflows/: ci.yml
dbt/: dbt_project.yml  profiles.yml
dbt/seeds/: coverage_test.csv  model_pricing.csv
dbt/tests/: fact_model_calls_unknown_model_pricing.sql  fact_prompts_cache_hit_rate_in_range.sql
docs/: CHANGELOG-workorder.md  HOW-IT-WORKS.md  code-audit.md  code-review.md  design-match-audit.md  number-map.md
docs/blog/: introducing-aura.html  introducing-aura.md  linkedin-carousel.html  linkedin-post.md
docs/screens/: HOW-IT-WORKS.md  OVERVIEW.md  README.md  agent-detail.md  (+12 more)
examples/: aura.toml
frontend/: next.config.js  package-lock.json  package.json
streamlit/: Dockerfile  app.py
watcher/: Dockerfile  pyproject.toml
watcher/src/aura_watcher/: checkpoint.py  coverage.py  duckdb_writer.py  main.py  redact.py  session_meta.py  snapshot.py
watcher/src/aura_watcher/adapters/: base.py  claude.py  sdk_trace.py
watcher/tests/: test_backfill_batching.py  test_checkpoint.py  test_claude_adapter.py  test_coverage.py  test_duckdb_writer.py  test_hash_content.py  test_main.py  test_redact.py  test_sdk_trace_adapter.py  test_session_attributes.py  test_session_meta_sdk.py  test_snapshot.py  test_startup_fixes.py
(+111 files in other folders)
