[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aura-watcher"
version = "0.1.0"
description = "Real-time JSONL watcher for Claude Code transcripts"
requires-python = ">=3.11"

dependencies = [
    "watchdog>=3.0.0",
    "duckdb>=0.9.0",
    "pydantic>=2.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
